--- a/app/src/main/res/layout/alert_odd.xml
+++ b/app/src/main/res/layout/alert_odd.xml
@@ -10,6 +10,8 @@
         android:text="Mumbai Vs Pune"
         android:id="@+id/textmatch"
         android:layout_alignParentTop="true"
+        android:textSize="18sp"
+        android:textColor="#000"
         android:gravity="center" />
 
     <View
@@ -23,6 +25,7 @@
         android:text="20/02/2016"
         android:id="@+id/textdate"
         android:hint=""
+        android:textColor="#000"
         android:layout_marginTop="10dp"
         android:gravity="center"/>
 
@@ -38,6 +41,7 @@
         android:hint="heading"
         android:id="@+id/textHeading"
         android:layout_marginTop="10dp"
+        android:textColor="#000"
         android:gravity="center"/>
 
     <View
@@ -58,7 +62,10 @@
         android:layout_weight="1"
         android:text=""
         android:hint="Odds"
-        android:layout_gravity="center_vertical"
+        android:textColor="#000"
+        android:textSize="15sp"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="center"
         android:id="@+id/textOdds" />
 
     <EditText
@@ -66,6 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:id="@+id/editBet"
+        android:textColor="#000"
         android:layout_gravity="right" />
 
     </LinearLayout>
@@ -74,6 +82,7 @@
         android:layout_height="wrap_content"
         android:text=""
         android:hint="Return"
+        android:textColor="#000"
         android:layout_gravity="center_horizontal"
         android:id="@+id/textrtrn" />
 
