--- a/app/src/main/res/layout/alert_odd.xml
+++ b/app/src/main/res/layout/alert_odd.xml
@@ -2,22 +2,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="300dp"
     android:layout_height="300dp"
+    android:background="@drawable/edit_text_border"
     android:padding="10dp">
 
-    <TextView
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_head"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="2dp"
+        card_view:cardUseCompatPadding="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        card_view:cardBackgroundColor="#3b5998"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Mumbai Vs Pune"
         android:id="@+id/textmatch"
         android:layout_alignParentTop="true"
         android:textSize="18sp"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:gravity="center" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:background="@color/textColor"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -25,15 +39,25 @@
         android:text="20/02/2016"
         android:id="@+id/textdate"
         android:hint=""
-        android:textColor="#000"
+        android:textColor="#fff"
         android:layout_marginTop="10dp"
         android:gravity="center"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:background="@color/textColor"/>
+            </LinearLayout>
+    </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_game"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="2dp"
+        card_view:cardUseCompatPadding="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        card_view:cardBackgroundColor="#fff"
+        >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,6 +68,7 @@
         android:textColor="#000"
         android:gravity="center"/>
 
+    </android.support.v7.widget.CardView>
     <View
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
@@ -54,6 +79,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
+        android:background="#fff"
         android:weightSum="3">
 
         <TextView
@@ -97,6 +123,7 @@
         android:text=""
         android:hint="Return"
         android:textColor="#000"
+        android:background="#fff"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:id="@+id/textrtrn" />
@@ -112,13 +139,18 @@
         android:layout_height="wrap_content"
         android:text="Cancel"
         android:id="@+id/btnCancel"
+        android:textColor="#fff"
+        android:background="@drawable/button_border"
         android:layout_gravity="center_horizontal" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Place Bet"
-        android:id="@+id/btnPlaceBet" />
+        android:id="@+id/btnPlaceBet"
+        android:layout_marginLeft="4dp"
+        android:textColor="#fff"
+        android:background="@drawable/button_border"/>
         </LinearLayout>
 
 </LinearLayout>
