--- a/app/src/main/res/layout/fragment_multiple__bet.xml
+++ b/app/src/main/res/layout/fragment_multiple__bet.xml
@@ -378,6 +378,7 @@
                     android:text="Place Bet"
                     android:textColor="#fff"
                     android:background="@drawable/button_border"
+                    android:layout_marginBottom="4dp"
                     android:layout_gravity="center"/>
 
             </LinearLayout>
@@ -685,6 +686,7 @@
                     android:layout_height="40dp"
                     android:text="Place Bet"
                     android:textColor="#fff"
+                    android:layout_marginBottom="4dp"
                     android:background="@drawable/button_border"
                     android:layout_gravity="center"/>
       </LinearLayout>
@@ -1022,6 +1024,7 @@
                         android:text="AutoFill"
                         android:gravity="center"
                         android:textColor="#fff"
+                        android:layout_marginBottom="4dp"
                         android:background="@drawable/button_border"
                         android:layout_gravity="center"/>
                     <Button
@@ -1032,6 +1035,8 @@
                         android:text="@string/place_bet"
                         android:gravity="center"
                         android:textColor="#fff"
+                        android:layout_marginBottom="4dp"
+                        android:layout_marginLeft="4dp"
                         android:background="@drawable/button_border"
                         android:layout_gravity="center"/>
                 </LinearLayout>
